--- a/examples/hello-mean/src/app/index/index.component.html
+++ b/examples/hello-mean/src/app/index/index.component.html
@@ -1,3 +1,3 @@
 <h1>{{ message }}</h1>
-<h3>Message retrieved from: {{ route }}</h3>
+<h3>Message retrieved from the server &#64; route path: {{ route }}</h3>
 <a routerLink="/hello">Hello</a>
